--- a/CSS/Day2_Font/style.css
+++ b/CSS/Day2_Font/style.css
@@ -1,3 +1,10 @@
 p{
-    font-family: 'Times New Roman';
-}
+    color: red;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    font-style: italic;
+    text-decoration:line-through;
+    letter-spacing: 1px;
+} 
