added font course of css

--- a/CSS/Day2_Font/style.css
+++ b/CSS/Day2_Font/style.css
@@ -7,4 +7,6 @@ p{
     font-style: italic;
     text-decoration:line-through;
     letter-spacing: 1px;
+    word-spacing: 10px;
+    vertical-align: baseline; /* this help to align image with text*/
 } 
