--- a/HTML/projects/Solar/style.css
+++ b/HTML/projects/Solar/style.css
@@ -61,3 +61,20 @@
 
 
             }
+            body{
+                margin: 0;
+                height: 100vh;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: black;
+                overflow: hidden;
+            }
+@keyframes orbit{
+                to{
+                    transform: rotate(360 deg);
+                }
+            }
+p:hover, h1:hover, a:hover {
+                background-color: yellow;
+              }
