--- a/CSS/Day4_Table/box.css
+++ b/CSS/Day4_Table/box.css
@@ -1,13 +1,23 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .box{
     border:5px solid red;
-    padding:10px 20px 30px 40px;
-    height: 10px;
-    width: 10px;
+    padding: 30px ;
+    height: 200px;
+    width: 200px;
+    margin: 50px;
+
+}
+.box1{
+    border:5px solid blue;
+    padding: 30px ;
+    height: 200px;
+    width: 200px;
+    margin: 60px;
 
 }
 
