--- a/CSS/Day4_Table/box.css
+++ b/CSS/Day4_Table/box.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
+
 
 .box{
     border:5px solid red;
@@ -10,14 +12,23 @@
     height: 200px;
     width: 200px;
     margin: 50px;
+    overflow: scroll;
+    display: inline-flex;
 
 }
 .box1{
     border:5px solid blue;
     padding: 30px ;
-    
+    overflow: scroll;
     width: 200px;
+    height: 200px;
     margin: 60px;
+    display: inline-flex;
 
 }
+
+.container{
+    display: flex;
+}
+
 
