--- a/JAVA_SCRIPT/Day04_Function/style.css
+++ b/JAVA_SCRIPT/Day04_Function/style.css
@@ -1,14 +1,25 @@
 p{
     font-size: 50px;
     background-color: beige;
-
+}
+p.cal{
+    font-size: 30px;
+    background-color: aquamarine;
+}
+p.add{
+    font-size: 20px;
+    background-color: aliceblue;
 }
 label{
     background-color:cyan;
 }
-.add{
-    background-color: greenyellow;
+.sum{
+    background-color: rgb(255, 47, 47);
 }
 body{
     background-color: azure;
+}
+input{
+    background-color:rgb(10, 10, 10);
+    color:white;
 }
