subtraction code added on calculator

--- a/JAVA_SCRIPT/Day04_Function/style.css
+++ b/JAVA_SCRIPT/Day04_Function/style.css
@@ -6,7 +6,7 @@ p.cal{
     font-size: 30px;
     background-color: aquamarine;
 }
-p.add{
+p.math{
     font-size: 20px;
     background-color: aliceblue;
 }
