--- a/JAVA_SCRIPT/Day04_Function/style.css
+++ b/JAVA_SCRIPT/Day04_Function/style.css
@@ -4,22 +4,30 @@ p{
 }
 p.cal{
     font-size: 30px;
-    background-color: aquamarine;
+    background-color: rgb(224, 226, 226);
+    color:red;
+    text-align: center;
+    text-decoration:underline;
 }
 p.math{
     font-size: 20px;
     background-color: aliceblue;
+    text-align: center;
 }
-label{
+label.first{
     background-color:cyan;
 }
-.sum{
+label.second{
+    background-color: rgb(222, 225, 28);
+}
+.button{
     background-color: rgb(255, 47, 47);
+   
 }
 body{
     background-color: azure;
 }
 input{
-    background-color:rgb(10, 10, 10);
-    color:white;
+    background-color:rgb(237, 225, 225);
+    color:rgb(0, 0, 0);
 }
