--- a/JAVA_SCRIPT/Day04_Function/style.css
+++ b/JAVA_SCRIPT/Day04_Function/style.css
@@ -30,7 +30,7 @@ label.second{
    
 }
 body{
-    background-color: black
+    background-color: rgb(96, 94, 94)
 }
 input{
     background-color:rgb(237, 225, 225);
