phone  validation code done

--- a/Protfolio/style.css
+++ b/Protfolio/style.css
@@ -1,10 +1,41 @@
-p{
-    
-}
-
 
 img{
     vertical-align: sub;
+  
+    height: 25px;
+    width: 25px;
     
-    
+    }
+button{
+    background-color: rgb(33, 32, 32);
+    border: 2px;
+    text-decoration: underline;
+    color: white;
+   font-size: 25px;
+}
+.container{
+    display: flex;
+}
+
+.box{
+  width: 200px;
+  height: 400px;
+  border: 10px;
+  margin: 1px;
+  padding: 10px 50px 30px 0;
+  background-color: rgb(33, 32, 32);
+  
+}
+
+.box1{
+    width: 900px;
+    height: 400px;
+    border: 0px;
+    margin: 1px;
+    padding: 10px 50px 30px 0;
+    background-color:rgb(15, 9, 9);
+   
+}
+button:hover{
+    color: rgb(214, 68, 68);
 }
