--- a/Protfolio/style.css
+++ b/Protfolio/style.css
@@ -39,3 +39,12 @@ button{
 button:hover{
     color: rgb(214, 68, 68);
 }
+p.white{
+    color: white;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+p.red{
+    color: red;
+}
