--- a/Protfolio/style.css
+++ b/Protfolio/style.css
@@ -1,7 +1,6 @@
 
-img{
+img.logo{
     vertical-align: sub;
-  
     height: 25px;
     width: 25px;
     
@@ -18,7 +17,7 @@ button{
 }
 
 .box{
-  width: 200px;
+  width: 400px;
   height: 400px;
   border: 10px;
   margin: 1px;
@@ -45,6 +44,9 @@ p.white{
     font-family: Arial, Helvetica, sans-serif;
 
 }
-p.red{
-    color: red;
+img{
+    height: 300px;
+    width: 200px;
+    
+    
 }
