--- a/PROJECTS/Slider/style.css
+++ b/PROJECTS/Slider/style.css
@@ -12,12 +12,12 @@ h1{
     background-image: url(https://i.pinimg.com/originals/c6/4e/ac/c64eac3cb6b4a514de486974fe1dc5b9.jpg);
     position: absolute;
     transform: translate(10%);
-    animation: slide 20s infinite linear;
+    animation: slide 20s infinite reverse;
     box-sizing: border-box;
     box-shadow: 2px 4px 10px 10px black;
 }
 @keyframes slide{
-    0%{
+    10%{
         background-image: url(https://i.pinimg.com/474x/7f/d0/34/7fd0346f1c870aeeb2d99b5f8fdf99ad.jpg);
     }
 }
